# pu1-ips-unlp-2025

./: .gitignore  API.md  Dockerfile  LEEME.txt  README.md  Untitled.ipynb  docker-compose.yaml  pyproject.toml  requirements.txt  run_pu1.sh
data/: ha.csv  senial_14253.csv
html/: 02_Ejercicio_2.html
notebooks/: 01_Ejercicio_1.ipynb  02_Ejercicio_2.ipynb  99_test_FIRs.ipynb  99_test_IIRs.ipynb  99_test_cajon_conv.ipynb  99_test_tftd_numeric.ipynb
src/dspmini/: __init__.py  core.py  plotting.py
