[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dspmini"
version = "0.1.0"
description = "Utilidades mínimas de DSP discreto para notebooks"
authors = [{name = "Gian"}]
readme = ""
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "matplotlib>=3.7"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["dspmini"]
